<resources>
    <string name="app_name">clapps registration</string>
    <string name="hod">HOD</string>
    <string name="student">STUDENT</string>
    <string name="register">REGISTER</string>
    <string name="sign_in">Sign In</string>
    <string name="full_name">Full name</string>
    <string name="password">Password</string>
    <string name="confirm_password">confirm password</string>
    <string name="email">Email</string>
    <string name="institution">Institution</string>
    <string name="title_activity_profile">profile</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="todo">TODO</string>
    <string name="username">Username</string>
    <string name="dont_have_an_account">Dont have an account?</string>
    <string name="create_account">create account</string>
    <string name="loggin">loggin</string>
    <string name="login">login</string>
</resources>