<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registeractivity"
    android:background="@drawable/clapps"
    android:orientation="vertical"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="24dp"
        android:background="@drawable/clapps"> >
        <TextView
            android:id="@+id/loginText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="@color/black"
            android:textSize="36sp"
            android:textStyle="italic"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="108dp" />

        <Button
            android:id="@+id/hodButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/black"
            android:text="@string/hod"
            android:textSize="18sp"
            app:cornerRadius="20dp"
          />

        <Button
            android:id="@+id/studentButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/black"
            android:text="@string/student"
            android:textSize="18sp"
            app:cornerRadius="20dp" />
    </LinearLayout>


</LinearLayout>